rook/0.9.2/ceph/cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
